Specify dependency versions in package.json.

--- a/vega-lite/package.json
+++ b/vega-lite/package.json
@@ -11,5 +11,9 @@
   "license": "ISC",
   "author": {
     "name": "Observable, Inc."
+  },
+  "peerDependencies": {
+    "vega": "3",
+    "vega-lite": "2"
   }
 }
